--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,1 +1,9 @@
-<p>index works!</p>
+<canvas id="render-canvas" class="render-canvas"></canvas>
+
+<div id="gui"></div>
+
+<!--
+<a href='http://wwwtyro.net/2016/10/22/2D-space-scene-procgen.html'>
+    <img src='http://wwwtyro.net/media/tut-bottom-left.png' style='position: fixed; bottom: 0px; left: 0px'>
+</a>
+ -->
