--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,6 +1,20 @@
 <canvas #canvas id="render-canvas" class="render-canvas" [width]="window.innerWidth-(guiWidth+3*marginWidth)" [height]="window.innerHeight-(2*marginHeight)"></canvas>
 
-<app-gui/>
+<app-gui
+    [seed]="props.seed"
+    [maxTextureSize]="scene.maxTextureSize"
+    [width]="canvas.width" [height]="canvas.height"
+    [renderPointStars]="props.renderPointStars" [renderStars]="props.renderStars" [renderSun]="props.renderSun" [renderNebulae]="props.renderNebulae" [shortScale]="props.shortScale"
+
+    (finishChangeSeed)="onFinishChangeSeed($event)"
+    (finishChangeWidth)="onFinishChangeWidth($event)"
+    (finishChangeHeight)="onFinishChangeHeight($event)"
+    (changeRenderPointStars)="onChangeRenderPointStars($event)"
+    (changeRenderStars)="onChangeRenderStars($event)"
+    (changeRenderSun)="onChangeRenderSun($event)"
+    (changeRenderNebulae)="onChangeRenderNebulae($event)"
+    (changeShortScale)="onChangeShortScale($event)"
+    />
 
 <!--
 <a href='http://wwwtyro.net/2016/10/22/2D-space-scene-procgen.html'>
