Simplify signal typing

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,7 +2,7 @@
 
 <app-gui
     [seed]="props.seed"
-    [maxTextureSize]="scene()!.maxTextureSize"
+    [maxTextureSize]="scene().maxTextureSize"
     [width]="canvas.width" [height]="canvas.height"
     [renderPointStars]="props.renderPointStars" [renderStars]="props.renderStars" [renderSun]="props.renderSun" [renderNebulae]="props.renderNebulae" [shortScale]="props.shortScale"
 
