--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,19 +1,13 @@
 <canvas #canvas appScene id="render-canvas" class="render-canvas" [width]="window.innerWidth-(guiWidth+3*marginWidth)" [height]="window.innerHeight-(2*marginHeight)"></canvas>
 
 <app-gui
-    [seed]="props.seed"
     [maxTextureSize]="scene().maxTextureSize"
     [width]="canvas.width" [height]="canvas.height"
-    [renderPointStars]="props.renderPointStars" [renderStars]="props.renderStars" [renderSun]="props.renderSun" [renderNebulae]="props.renderNebulae" [shortScale]="props.shortScale"
+    [props]="props"
 
-    (changeSeed)="onChangeSeed($event)"
+    (changeProps)="onChangeProps($event)"
     (changeWidth)="onChangeWidth($event)"
     (changeHeight)="onChangeHeight($event)"
-    (changeRenderPointStars)="onChangeRenderPointStars($event)"
-    (changeRenderStars)="onChangeRenderStars($event)"
-    (changeRenderSun)="onChangeRenderSun($event)"
-    (changeRenderNebulae)="onChangeRenderNebulae($event)"
-    (changeShortScale)="onChangeShortScale($event)"
     />
 
 <!--
