Add download and copy (exports) buttons

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -10,6 +10,11 @@
     (changeHeight)="onChangeHeight($event)"
     />
 
+<div class="exports">
+    <button (click)="downloadCanvas()">Download the image</button>
+    <button (click)="copyCanvas()">Copy the image to clipboard</button>
+</div>
+
 <!--
 <a href='http://wwwtyro.net/2016/10/22/2D-space-scene-procgen.html'>
     <img src='http://wwwtyro.net/media/tut-bottom-left.png' style='position: fixed; bottom: 0px; left: 0px'>
