Set the canvas width and height only once, not after every window resize

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,4 +1,4 @@
-<canvas #canvas appScene id="render-canvas" class="render-canvas" [width]="window.innerWidth-(guiWidth+3*marginWidth)" [height]="window.innerHeight-(2*marginHeight)"></canvas>
+<canvas #canvas appScene id="render-canvas" class="render-canvas"></canvas>
 
 <app-gui
     [maxTextureSize]="scene().maxTextureSize"
