Better button pointer style

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -10,6 +10,8 @@
 }
 .exports button {
     display: block;
+}
+.exports button:not(:disabled) {
     cursor: pointer;
 }
 .exports button:not(:first-child) {
