Use the map size for button conditions
making renderScene async is not necessary, for some reason : the only tipping point that makes Angular report accurately the map size in the html, is passing the promises array to Promise.all
I don't understand why but since it works...

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -11,8 +11,8 @@
     />
 
 <div class="exports">
-    <button (click)="downloadCanvas()">Download the image</button>
-    <button (click)="copyCanvas()" [disabled]="!canCopyCanvas">Copy the image to clipboard</button>
+    <button (click)="downloadCanvas()" [disabled]="blobMap.size<1">Download the image</button>
+    <button (click)="copyCanvas()" [disabled]="!canCopyCanvas || blobMap.size<1">Copy the image to clipboard</button>
 </div>
 
 <!--
