Simplify the scene proxy directive
Keeping the directive is necessary to maintain a correct load order

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,7 +1,7 @@
 <canvas #canvas appScene id="render-canvas" class="render-canvas"></canvas>
 
 <app-gui
-    [maxTextureSize]="scene().maxTextureSize()"
+    [maxTextureSize]="scene().maxTextureSize"
     [width]="canvas.width" [height]="canvas.height"
     [props]="props"
 
